objects/nMONITOR__Informatica_Cloud_Integration_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting holding Informatica Cloud authentication details and sub-org Id.</description>
    <fields>
        <fullName>nMONITOR__Informatica_Cloud_Password__c</fullName>
        <description>Password of read-only Informatica Cloud user.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Password of read-only Informatica Cloud user.</inlineHelpText>
        <label>Informatica Cloud Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Informatica_Cloud_Username__c</fullName>
        <description>Username of read-only Informatica user.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Username of read-only Informatica user.</inlineHelpText>
        <label>Informatica Cloud Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Informatica_Org_Id__c</fullName>
        <description>Id of customer Informatica sub-org.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Id of customer Informatica sub-org.</inlineHelpText>
        <label>Informatica Org Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>-D Informatica Cloud Integration Setting</label>
</CustomObject>